WIP: Feature 3437 model discovery (#4240)